style.css
@font-face {
    src: url("./police/tarekah-font/Tarekah-G330y.otf") format("opentype");
    font-family: "Tarekah";
}

@font-face {
    src: url("./police/Abhaya_Libre/AbhayaLibre-Regular.ttf") format("truetype");
    font-family: "Abhaya Libre";
}

html {
    height: 100%;
}


body {
    background-color: rgb(33, 37, 41);
    font-family: "Abhaya Libre";
    color: white;
    height: 100%;
    margin: 0;
}

.page {
    max-width: 1440px;
    min-height: 100vh;
    margin: 0 auto 0 auto;
    position: relative;
}

nav {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 15px;
}



footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    text-align: center;
}


.lien {
    list-style: none;
    display: flex;
}

.lien li {
    display: flex;
    align-items: center;
    margin: 0 70px;
}

.lien a {
    text-decoration: none;
    font-size: 32px;
    color: white;

}

.lien a:hover {
    text-decoration: underline;
}

.section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 90vh;
}

.section.entete {
    margin: 10% 0 10% 0;
    height: auto;

}

.heros {
    display: grid;
    justify-items: center;
    position: relative;

}

h1 {
    font-family: "Tarekah";
    font-weight: normal;
    font-size: 150px;
}

.signature {
    font-style: italic;
    grid-area: 1/1/2/2;
    opacity: 100%;
    z-index: 4;

}

.signature.deux {
    color: rgb(222, 226, 230);
    opacity: 40%;
    grid-area: 1/1/4/2;
    padding: 10px 0px 0px 0px;
    filter: blur(3px);
    z-index: 3;
}

.signature.trois {
    grid-area: 1/1/4/2;
    color: rgb(173, 181, 189);
    padding: 20px 0px 0px 0px;
    opacity: 60%;
    filter: blur(3px);
    z-index: 2;
}

.signature.quatre {
    grid-area: 1/1/4/2;
    filter: blur(3px);
    opacity: 90%;
    color: rgb(73, 80, 87);
    padding: 30px 0px 0px 0px;
    z-index: 1;
}

h2 {
    font-size: 100px;
    font-weight: normal;
    display: flex;
    justify-content: center;
}

p {
    font-size: 40px;
}

.svg {
    width: 90px;
    margin: 30px;
}

.info {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}


.ligne {
    height: 1px;
    width: 80%;
    background-color: white;
    padding: 10px;
    box-shadow: 0 0 7px 7px white;
}

img {
    width: 40%;
}

.couverture {
    border-width: 20px;
    border-style: solid;
    border-color: rgb(73, 80, 87);
    margin: 0 2% 0 2%;
}


p.propos {
    width: 45%;
}

.competences {
    display: flex;
    justify-content: center;
    align-items: start;
    gap: 120px;
}

.logo {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    align-items: center;
    row-gap: 40px;
    column-gap: 60px;
}

.categorie {
    position: absolute;
    bottom: 30px;
}

